# take_while_with_failure.rs

./: Cargo.toml  README.md
src/: lib.rs
